# CommentNestChat

./: .dev.env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 69bd64f96764_initial_tables.py  f443f172c1c8_sec.py
src/: dependecy.py  main.py
src/api/v1/routers/: captcha.py  comments.py  websocket.py
src/core/: config.py  websocket.py
src/db/: base.py  session.py
src/models/: comment.py
src/repositories/: comment_repo.py
src/schemas/: comment.py
src/services/: captcha.py  comment.py  file_service.py  redis_service.py  validation_service.py
src/use_cases/: create_comment_command.py
static/: home.html
static/css/: style.css
static/js/: script.js
